# Fractoid

./: CMakeLists.txt  README.md
gui/: bail.ui  iters.ui  preferences.ui  seed.ui  window.ui
inc/: canvas.h  window.h
inc/fractoid/: fractoid.h
inc/fractoid/lib/lodepng/: lodepng.cpp  lodepng.h
inc/fractoid/src/: algorithm.cpp  burningship.cpp  complex.cpp  image.cpp  julia.cpp  mandelbrot.cpp  manowar.cpp  phoenix.cpp
lib/fractoid/: fractoid.h
lib/fractoid/inc/: distance.h
lib/fractoid/src/: algorithm.cpp  burningship.cpp  color.cpp  complex.cpp  image.cpp  julia.cpp  mandelbrot.cpp  manowar.cpp  phoenix.cpp
lib/lodepng/: lodepng.cpp  lodepng.h
src/: canvas.cpp  cli.cpp  gui.cpp  window.cpp
